@@ -1812,7 +1812,8 @@ static int miFreeHeader(rpmdbMatchIterator mi, dbiIndex dbi)
 /*@i@*/	key->data = (void *) &mi->mi_prevoffset;
 	key->size = sizeof(mi->mi_prevoffset);
 	data->data = headerUnload(mi->mi_h);
-	data->size = headerSizeof(mi->mi_h, HEADER_MAGIC_NO);
+	data->size = headerSizeof(mi->mi_h, HEADER_MAGIC_YES);
+	data->size -= 8;	/* XXX HEADER_MAGIC_NO */
 
 	/* Check header digest/signature on blob export (if requested). */
 	if (mi->mi_hdrchk && mi->mi_ts) {
@@ -3126,7 +3127,8 @@ memset(data, 0, sizeof(*data));
 
 	/* XXX db0: hack to pass sizeof header to fadAlloc */
 	datap = h;
-	datalen = headerSizeof(h, HEADER_MAGIC_NO);
+	datalen = headerSizeof(h, HEADER_MAGIC_YES);
+	datalen -= 8;	/* XXX HEADER_MAGIC_NO */
 
 	xx = dbiCopen(dbi, dbi->dbi_txnid, &dbcursor, DB_WRITECURSOR);
 
@@ -3241,7 +3243,8 @@ key->data = (void *) &mi_offset;
 /*@=immediatetrans@*/
 key->size = sizeof(mi_offset.ui);
 data->data = headerUnload(h);
-data->size = headerSizeof(h, HEADER_MAGIC_NO);
+data->size = headerSizeof(h, HEADER_MAGIC_YES);
+data->size -= 8;	/* XXX HEADER_MAGIC_NO */
 
 		/* Check header digest/signature on blob export. */
 		if (hdrchk && ts) {
